# firmngin-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  keys.json.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  active_session_events.py  async_basic.py  async_with_image_upload.py  batch_and_location.py  device_status_events.py  entity_command.py  entity_publish.py  merchant_status_events.py  payment_events.py  pin_verification_events.py  sync_basic.py
examples/flask_device_dashboard/: .env.example  README.md  app.py  requirements.txt
scripts/: publish-pypi.sh
src/firmngin/: __init__.py  _banner.py  _paths.py  _pem.py  _version.py  builders.py  callbacks.py  client.py  client_sync.py  config.py  crypto.py  exceptions.py  http.py  logging.py  mqtt.py  ntp.py  payloads.py  queue.py  session.py  tls.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_banner.py  test_client.py  test_client_sync.py  test_config.py  test_crypto.py  test_exceptions.py  test_paths.py  test_payloads.py  test_queue.py  test_session_setup.py  test_tls.py
